# hyprbar

./: CMakeLists.txt  README.md
protocols/: wlr-layer-shell-unstable-v1.xml
src/: Bar.cpp  Bar.hpp  HyprIPC.cpp  HyprIPC.hpp  main.cpp  xdg_stub.c
src/modules/: Clock.hpp  Module.hpp  SysInfo.hpp  WindowTitle.hpp  Workspaces.cpp  Workspaces.hpp
